--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invitaion Game</title>
     <link rel="stylesheet" href="style.css">
+   
 </head>
 <body>
+<p class="helper tap">Hover over the tap to fill the mug</p>
+    <h1>Fill the mug <span id="target">0</span>%</h1>
+    <h2 id="percent-filled"></h2>
+    <h3 id="result"></h3>
+    <div id="tap-container">
+    <div id="tap"></div>
+    <div id="handle"></div>
+    <div id="pour"></div>
+    </div>
+
+    <div id="mug-container">
+    <div id="mug">
+    <div id="beer"></div>
+    </div>  
+
+<p class="helper mug">Click the mug to reset</p>
+
+
     
-    
-    <script src="index.js"></script>
+
+    <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
